force-app/main/default/objects/ssot__FinancialAssetPortfolioTargetAllocation__dlm/fields/ssot__ActualAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualAmount__c</fullName>
    <label>Actual Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>