force-app/main/default/objects/ssot__FinancialAssetPortfolioTargetAllocation__dlm/fields/ssot__FinancialHoldingSector__c.field-meta.xml
<CustomField>
    <fullName>ssot__FinancialHoldingSector__c</fullName>
    <label>Financial Holding Sector</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FinancialHoldingSector</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>