force-app/main/default/objects/ssot__FinancialAssetPortfolioTargetAllocation__dlm/fields/ssot__PositiveToleranceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PositiveToleranceAmount__c</fullName>
    <label>Positive Tolerance Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PositiveToleranceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>