force-app/main/default/objects/ssot__FinancialAssetPortfolioTargetAllocation__dlm/fields/ssot__ReferenceTargetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceTargetId__c</fullName>
    <label>Reference Target</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceTargetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>