force-app/main/default/objects/ssot__FinancialAssetPortfolioTargetAllocation__dlm/fields/ssot__TargetPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetPercent__c</fullName>
    <label>Target Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>